--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-	<title>APP NAME: A JS PROJECT</title>
+	<title>Superdog Events: A Coding Challenge</title>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,7 +26,7 @@
 			<a class="navbar-brand" href="/index.html">
 				<img src="img/MspectreMark.svg" height="24" class="d-inlne-block align-text-top"
 					alt="app logo">
-				APP NAME
+				Superdog Events
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
