--- a/app.html
+++ b/app.html
@@ -112,7 +112,9 @@
 			</div>
 			<div class="row">
 				<div class="col">
-					<button class="button btn btn-secondary">Add Data</button>
+					<button class="button btn btn-secondary" data-bs-toggle="modal"
+						data-bs-target="#addData">Add
+						Data</button>
 				</div>
 				<table class="table table-striped" id="eventData">
 					<thead>
@@ -172,7 +174,54 @@
 			</div>
 		</div>
 	</footer>
+	<!-- Modal Section -->
+	<div class="modal" id="addData">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<!-- Modal Header -->
+				<div class="modal-header">
+					<h4 class="modal-title">Add A New
+						Event</h4>
+					<button class="btn-close" type="button" data-dismiss="modal">&times;</button>
+				</div>
+				<!-- Modal Body -->
+				<div class="modal-body">
+					<form id="newEvent">
+						<div class="form-group">
+							<label for="newEventName" class="form-control">Event
+								Name</label>
+							<input id="newEventName" type="text" class="form-control"
+								placeholder="Event Name">
+						</div>
+						<div class="form-group">
+							<label for="newEventCity" class="form-control">Event
+								City</label>
+							<input id="newEventCity" type="text" class="form-control"
+								placeholder="Event City">
+						</div>
+						<div class="form-group">
+							<label for="newEventAttendance" class="form-control">Event
+								Attendance</label>
+							<input id="newEventAttendance" type="text" class="form-control"
+								placeholder="Event Attendance">
+						</div>
+						<div class="form-group">
+							<label for="newEventDate" class="form-control">Event
+								Date</label>
+							<input id="newEventDate" type="date" class="form-control"
+								placeholder="Date">
+						</div>
+					</form>
+				</div>
+				<!-- Modal Footer -->
+				<div class="modal-footer">
+					<button type="button" class="btn
+					btn-secondary" data-bs-dismiss="modal">Save</button>
+				</div>
 
+			</div>
+		</div>
+	</div>
 	<!-- Bootstrap JS -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
