updated placholder info for modal

--- a/app.html
+++ b/app.html
@@ -191,13 +191,13 @@
 							<label for="newEventName" class="form-control">Event
 								Name</label>
 							<input id="newEventName" type="text" class="form-control"
-								placeholder="Event Name">
+								placeholder="Name">
 						</div>
 						<div class="form-group">
 							<label for="newEventCity" class="form-control">Event
 								City</label>
 							<input id="newEventCity" type="text" class="form-control"
-								placeholder="Event City">
+								placeholder="City">
 						</div>
 						<div class="form-group">
 							<label for="newEventState">State</label>
@@ -259,7 +259,7 @@
 							<label for="newEventAttendance" class="form-control">Event
 								Attendance</label>
 							<input id="newEventAttendance" type="text" class="form-control"
-								placeholder="Event Attendance">
+								placeholder="Attendance">
 						</div>
 						<div class="form-group">
 							<label for="newEventDate" class="form-control">Event
