--- a/app.html
+++ b/app.html
@@ -278,8 +278,17 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- templates -->
+	<template id="eventData-template">
+
+	</template>
+	<template id="cityDD-template">
+		<a class="drop-item" onclick="getEvents(this)"></a>
+	</template>
+
 	<!-- Bootstrap JS -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+	<script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
 		crossorigin="anonymous">
 	</script>
@@ -290,7 +299,7 @@
 	<!-- JS  -->
 	<script src="/js/site.js"></script>
 	<script>
-		document.getElementById("btnSubmit").addEventListener("click", getMessage);
+		window.addEventListener("load", buildDropDown);
 	</script>
 </body>
 
