--- a/app.html
+++ b/app.html
@@ -71,12 +71,11 @@
 						<button type="button"
 							class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
 							data-bs-toggle="dropdown" aria-expanded="false">
-							<span class="visually-hidden"></span>Toggle
-							Dropdown</span>
+							<span class="visually-hidden"></span>
 						</button>
-						<div id="eventDropdown" class="dropdown-menu">
-							<!-- Template for dropdown -->
-						</div>
+						<ul id="eventDropdown" class="dropdown-menu">
+							<!-- Menu Items Go Here -->
+						</ul>
 					</div>
 					<table class="table table-striped">
 						<tr>
