--- a/app.html
+++ b/app.html
@@ -64,17 +64,14 @@
 		<div class="container mt-5">
 			<div class="row row-cols-1 row-cols-md-2">
 				<div class="col">
-					<div class="btn-group">
-						<button type="button" class="btn btn-
-						btn-secondary">Pick A Location
+					<div class="btn-group" role="group">
+						<button class="btn
+						btn-secondary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" id="btnCityDrop" type="button">
+							Pick Location
 						</button>
-						<button type="button"
-							class="btn btn-secondary dropdown-toggle dropdown-toggle-split"
-							data-bs-toggle="dropdown" aria-expanded="false">
-							<span class="visually-hidden"></span>
-						</button>
-						<ul id="eventDropdown" class="dropdown-menu">
-							<!-- Menu Items Go Here -->
+						<ul class="dropdown-menu" id="eventDropdown"
+							aria-labelledby="btnCityDrop">
+							<!-- Menu items go here -->
 						</ul>
 					</div>
 					<table class="table table-striped">
