added least calc and average calc to displayStats. Least calc not working yet

--- a/app.html
+++ b/app.html
@@ -84,15 +84,15 @@
 							<td id="total">160</td>
 						</tr>
 						<tr>
-							<td>Total Attendance</td>
+							<td>Average Attendance</td>
 							<td id="average">160</td>
 						</tr>
 						<tr>
-							<td>Total Attendance</td>
+							<td>Most Attendance</td>
 							<td id="most">160</td>
 						</tr>
 						<tr>
-							<td>Total Attendance</td>
+							<td>Least Attendance</td>
 							<td id="least">160</td>
 						</tr>
 					</table>
