updated template cityDD-template with bs class dropdown-item

--- a/app.html
+++ b/app.html
@@ -281,7 +281,7 @@
 	</template>
 	<template id="cityDD-template">
 		<li>
-			<a class="drop-item" onclick="getEvents(this)"></a>
+			<a class="dropdown-item" onclick="getEvents(this)"></a>
 		</li>
 	</template>
 
