--- a/app.html
+++ b/app.html
@@ -277,7 +277,13 @@
 
 	<!-- templates -->
 	<template id="eventData-template">
-
+<tr>
+	<td data-id="event"></td>
+	<td data-id="city"></td>
+	<td data-id="state"></td>
+	<td data-id="attendance"></td>
+	<td data-id="eventData"></td>
+</tr>
 	</template>
 	<template id="cityDD-template">
 		<li>
