--- a/app.html
+++ b/app.html
@@ -59,7 +59,7 @@
 			</div>
 		</div>
 	</nav>
-
+	<!-- Main Section -->
 	<main class="flex-shrink-0">
 		<div class="container mt-5">
 			<div class="row row-cols-1 row-cols-md-2">
@@ -277,13 +277,13 @@
 
 	<!-- templates -->
 	<template id="eventData-template">
-<tr>
-	<td data-id="event"></td>
-	<td data-id="city"></td>
-	<td data-id="state"></td>
-	<td data-id="attendance"></td>
-	<td data-id="eventData"></td>
-</tr>
+		<tr>
+			<td data-id="event"></td>
+			<td data-id="city"></td>
+			<td data-id="state"></td>
+			<td data-id="attendance"></td>
+			<td data-id="eventData"></td>
+		</tr>
 	</template>
 	<template id="cityDD-template">
 		<li>
